tests/ui/derive/fail_non_text_predicate.stderr
error[E0599]: the method `ilike` exists for struct `foundry::Column<User, bool>`, but its trait bounds were not satisfied
  --> tests/ui/derive/fail_non_text_predicate.rs:11:26
   |
11 |     let _ = User::ACTIVE.ilike("true");
   |                          ^^^^^ method cannot be called on `foundry::Column<User, bool>` due to unsatisfied trait bounds
   |
   = note: the following trait bounds were not satisfied:
           `bool: database::model::TextColumnType`
